all the flags have been done and added to flags.html file

--- a/Flags.html
+++ b/Flags.html
@@ -12,7 +12,7 @@
     </header>
     <div id="container">
         <div>
-            <a href="flag_Netherlands.html">Netherlands</a>
+            <a href="flag_Ethiopia.html">Ethiopia</a>
         </div>
         <div>
             <a href="flag_Indian.html">Indian</a>
@@ -24,25 +24,25 @@
             <a href="flag_England.html">England</a>
         </div>
         <div>
-            <a href="flag_Netherlands.html">Netherlands</a>
+            <a href="flag_China.html">China</a>
         </div>
         <div>
-            <a href="flag_Netherlands.html">Netherlands</a>
+            <a href="flag_Finland.html">Finland</a>
         </div>
         <div>
-            <a href="flag_Netherlands.html">Netherlands</a>
+            <a href="flag_Ireland.html">Ireland</a>
         </div>
         <div>
-            <a href="flag_Netherlands.html">Netherlands</a>
+            <a href="flag_Austria.html">Austria</a>
         </div>
         <div>
-            <a href="flag_Netherlands.html">Netherlands</a>
+            <a href="flag_Russia.html">Russia</a>
         </div>
         <div>
-            <a href="flag_Netherlands.html">Netherlands</a>
+            <a href="flag_Germany.html">Germany</a>
         </div>
         <div>
-            <a href="flag_Netherlands.html">Netherlands</a>
+            <a href="flag_France.html">France</a>
         </div>
         <div>
             <a href="flag_Netherlands.html">Netherlands</a>
