--- a/myworks.html
+++ b/myworks.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Works</title>
-    <link rel="stylesheet" href="assets/css/Myworks.css">
+    <link rel="stylesheet" href="assets/css/myworks.css">
 </head>
 <body>
     <header>
