my cv application is added to myworks

--- a/myworks.html
+++ b/myworks.html
@@ -20,7 +20,9 @@
         <div>
             <a href="Flags.html" target="_blank">Flags</a>
         </div>
-        
+        <div>
+            <a href="https://davenbezz.github.io/mycv/" target="_blank">My CV</a>
+        </div>
     </div>
     <footer>
         <h3></h3>
