I've updated the blog page and the ethiopian flag to have an emblem

--- a/flag_Ethiopia.html
+++ b/flag_Ethiopia.html
@@ -11,6 +11,8 @@
         <a href="Flags.html">Back</a>
         .
     </div>
-    <div class="ethiopia"></div>
+    <div class="ethiopia">
+        <img src="assets/images/ethiopian_emblem.png" alt="emblem" id="emblem">
+    </div>
 </body>
 </html>
