flags are updated and flags.html is now more beautiful

--- a/flag_Iceland.html
+++ b/flag_Iceland.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netherlands Flag</title>
-    <link rel="stylesheet" href="assets/css/netherlands.css">
+    <title>Iceland Flag</title>
+    <link rel="stylesheet" href="assets/css/iceland.css">
 </head>
 <body>
     <div>
         <a href="Flags.html">Back</a>
     </div>
-    <div class="netherlands"></div>
+    <div class="iceland"></div>
 </body>
 </html>
