--- a/flag_Japan.html
+++ b/flag_Japan.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>England Flag</title>
-    <link rel="stylesheet" href="assets/css/england.css">
+    <title>Japan Flag</title>
+    <link rel="stylesheet" href="assets/css/japan.css">
 </head>
 <body>
     <div>
         <a href="Flags.html">Back</a>
+        <h1>.</h1>
     </div>
-    <div id="england"></div>
+    <div class="japan"></div>
 </body>
 </html>
