--- a/Flags.html
+++ b/Flags.html
@@ -4,48 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flags</title>
-    <link rel="stylesheet" href="assets/css/Flags.css">
+    <link rel="stylesheet" href="assets/css/flags.css">
 </head>
 <body>
     <header>
         <h1>Flags of Various Countries</h1>
     </header>
-    <div id="container">
+    <div id="all">
         <div>
-            <a href="flag_Ethiopia.html">Ethiopia</a>
+            <div id="caption"></div>
+            <img id="pole" src="assets/images/pole.jpg"> </img>
+            <img id="flag" src="assets/images/ethiopian.jpg"> </img>
         </div>
-        <div>
-            <a href="flag_Indian.html">Indian</a>
-        </div>
-        <div>
-            <a href="flag_Bangladesh.html">Bangladesh</a>
-        </div>
-        <div>
-            <a href="flag_England.html">England</a>
-        </div>
-        <div>
-            <a href="flag_China.html">China</a>
-        </div>
-        <div>
-            <a href="flag_Finland.html">Finland</a>
-        </div>
-        <div>
-            <a href="flag_Ireland.html">Ireland</a>
-        </div>
-        <div>
-            <a href="flag_Austria.html">Austria</a>
-        </div>
-        <div>
-            <a href="flag_Russia.html">Russia</a>
-        </div>
-        <div>
-            <a href="flag_Germany.html">Germany</a>
-        </div>
-        <div>
-            <a href="flag_France.html">France</a>
-        </div>
-        <div>
-            <a href="flag_Netherlands.html">Netherlands</a>
+        <div id="container">
+            <div class="flags">
+                <a href="flag_Ethiopia.html">Ethiopia</a>
+            </div>
+            <div class="flags">
+                <a href="flag_Iceland.html">Iceland</a>
+            </div>
+            <div class="flags">
+                <a href="flag_Bangladesh.html">Bangladesh</a>
+            </div>
+            <div class="flags">
+                <a href="flag_Japan.html">Japan</a>
+            </div>
+            <div class="flags">
+                <a href="flag_China.html">China</a>
+            </div>
+            <div class="flags">
+                <a href="flag_Finland.html">Finland</a>
+            </div>
+            <div class="flags">
+                <a href="flag_Ireland.html">Ireland</a>
+            </div>
+            <div class="flags">
+                <a href="flag_Austria.html">Austria</a>
+            </div>
+            <div class="flags">
+                <a href="flag_Russia.html">Russia</a>
+            </div>
+            <div class="flags">
+                <a href="flag_Germany.html">Germany</a>
+            </div>
+            <div class="flags">
+                <a href="flag_France.html">France</a>
+            </div>
+            <div class="flags">
+                <a href="flag_USA.html">United States of America</a>
+            </div>
+            <div class="flags">
+                <a href="flag_SouthAfrica.html"> South Africa</a>
+            </div>
         </div>
     </div>
     
