the blog page's content updated and added to myworks

--- a/Blog.html
+++ b/Blog.html
@@ -10,9 +10,19 @@
     <header>
         <h1>My Blog</h1>
     </header>
-    <div id="by">
+    <div id="the_body">
         <p>
+            <h2>What is the difference between EM and Rm?</h2>
             <h3>
+                An equitable motgage is creating a charge on the property by handing over the titledeeds of the property by its owner to the lender and orally confirming of handing over the title deeds for the intent to create a charge on the property for the amount borrowed.
+
+                A registered mortgage is registering the document creating the charge on the property by the mortgagor in favour of lender, with sub-registrar.
+                
+                <p>
+                Equitable mortgage will not incur any stamp duty. Registered mortgage will entail stamp duty based on the amount lent or amount for which charge has been created. Sometimes, amount lent may be more but mortgage will be registered for a nominal amount to avoid stamp duty.
+
+                Nowadays, registered mortgages are preferred even by banks as it is more fool proof and indicates the encumbrances in the encumbrance certificate issued by sub-registrar.
+                </p>
                 CSS units could be a subject of several articles.
                 <b>What are rem units?</b>
                 REM stands for "root em", they can help us to do achieve a harmonious and balanced design.
@@ -20,7 +30,7 @@
                  the definition for one rem unit is:
                 Equal to the computed value of font-size on the root element. When specified on the font-size property of the root element, the rem units refer to the property’s initial value.
                 <p>
-                    Both em and rm are flexible, scannable units.
+                    Both em and rem are flexible, scannable units.
                 </p>
 
             </h3>
@@ -28,8 +38,16 @@
     </div>
     <footer>
         <hr>
-        hi
-        <h1>alsdkfjaslkdfhaslkdfj</h1>
+            <div>
+                <a href="http://www.t.me/dave987"><img src="./assets/images/telegram.png" alt="telegram" target="_blank"></a>
+                <a href="https://www.facebook.com/davenbezz" target="_blank"><img src="./assets/images/facebook.png" alt="facebook"></a>
+                <a href="https://www.linkedin.com/in/dawit-bezabih-b54309188/" target="_blank"><img src="./assets/images/linkedin.png" alt="linkedin"></a>
+                <a href="mailto:it.dawit.bezabih@gmail.com" target="_blank"><img src="./assets/images/email.png" alt="email"></a>
+            </div>
+        <hr>
+        <div>
+            Developed by Dawit B. &copy; 2020
+        </div>
     </footer>
 </body>
 </html>
