--- a/Flags.html
+++ b/Flags.html
@@ -61,6 +61,10 @@
     
 
     <footer>
+        <hr>
+        <div>
+            Developed by Dawit B. &copy; 2020
+        </div>
     </footer>
 </body>
 </html>
