--- a/myworks.html
+++ b/myworks.html
@@ -23,6 +23,9 @@
         <div>
             <a href="https://davenbezz.github.io/mycv/" target="_blank">My CV</a>
         </div>
+        <div>
+            <a href="Blog.html" target="_blank">Blogs</a>
+        </div>
     </div>
     <footer>
         <h3></h3>
