the blog is updated due to wrong information in it

--- a/Blog.html
+++ b/Blog.html
@@ -15,15 +15,6 @@
             <h2>What is the difference between EM and REM?</h2>
             <img src="./assets/images/confused.jpg" alt="Confused?">
             <h3>
-                An equitable motgage is creating a charge on the property by handing over the titledeeds of the property by its owner to the lender and orally confirming of handing over the title deeds for the intent to create a charge on the property for the amount borrowed.
-
-                A registered mortgage is registering the document creating the charge on the property by the mortgagor in favour of lender, with sub-registrar.
-                
-                <p>
-                Equitable mortgage will not incur any stamp duty. Registered mortgage will entail stamp duty based on the amount lent or amount for which charge has been created. Sometimes, amount lent may be more but mortgage will be registered for a nominal amount to avoid stamp duty.
-
-                Nowadays, registered mortgages are preferred even by banks as it is more fool proof and indicates the encumbrances in the encumbrance certificate issued by sub-registrar.
-                </p>
                 CSS units could be a subject of several articles.
                 <b>What are rem units?</b>
                 REM stands for "root em", they can help us to do achieve a harmonious and balanced design.
@@ -39,12 +30,17 @@
                 </ul>
 
             </h3>
-            <p><h2>How browsers interpret</h2></p>
+            <p><h2>How browsers interpret pixels</h2></p>
             <h3>
-                A web browser is a piece of software that loads files from a remote server (or perhaps a local disk) and displays them to you — allowing for user interaction.
-                However, within a browser, there’s a piece of software that figures out what to display to you based on the files it receives. This is called the browser engine.
-                The browser engine is a core software component of every major browser, and different browser manufacturers call their engines by different names. The browser engine for Firefox is called Gecko, and Chrome’s is called Blink, which happens to be a fork of WebKit.
-                Browsers have a default pixel size of 16. So whatever comes above or below is interpreted according to this default pixel size.
+                Setting the size of the front with percentages causes the browser to calculate the size of the font based on the size of the parent element. For example, if the font size
+                 of the body is set to 12 pixels and the font size for p element is set to 125%, the font size for the text in paragraphs is 15 pixels.
+                 <p>
+                     You can use percentages, lenghts units, and font-size keyworks to set type size. Length units fall into two categories: absolute and relative. Absolute length includes Inches, Centimeters, 
+                     Millimeters, Points and Picas.
+                     A point, in terms of the CSS specification, is equal to 1/72nd of an inch and a pica is equal to 12 points.
+Because browser displays vary due to different operating systems and video settings, setting type in a fixed (or absolute ) value doesn’t make much sense. In fact, it’s best to avoid absolute measurements for web documents, unless you’re styling documents for fixed output. For example, when you create a style sheet to print a web document, absolute length units are preferred.
+
+                 </p>
             </h3>
             <h2>The Specific changes in CSS3</h2>
             <h3>
